@@ -188,7 +188,7 @@ else
     [mx, mn, XYZ, img2] = volmaxmin(SO.img(2).vol);
 
     % apply function to img2
-    i1 = img2; eval(OV.func); img2 = i1;
+    if isfield(OV,'func'), i1 = img2; eval(OV.func); img2 = i1; end
     
     % threshold map and restrict coordinates
     Q = find(compare_to_threshold(img2,range(1)) & le(img2,range(2)));
